// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copied renders 1`] = `
<div class="app">
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`copied renders 2`] = `
<div class="app">
  <transition-stub>
    <div class="copied-notification"><span class="copied-span"> Copied! </span><button class="notification-button notification-button__icon_cross_white"></button></div>
  </transition-stub>
</div>
`;
